# YamadaMeshFixer

./: .gitignore  CMakeLists.txt  combine_objs.py  readme.md  run_for_objs.py
include/: SpdlogDef.hpp  Timer.hpp  YamadaMeshFixer.hpp  argparser.hpp  stl_reader.h  tiny_obj_loader.cpp
src/: main.cpp
